--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 80px 15px;
+  margin: 50px 5px;
   background-image: linear-gradient(
     to bottom right,
     rgb(219, 118, 87),
@@ -8,18 +8,20 @@
   border-style: solid;
   border-color: rgb(190, 83, 83);
   border-radius: 30px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 body {
   padding: 30px 10px;
-  max-width: 1000px;
+  max-width: 750px;
   margin: block;
 }
 
 h1 {
   text-align: center;
   font-weight: 800px;
-  padding: 60px 10px 10px 10px;
+  padding: 60px 10px 0px 10px;
   color: white;
   padding-left: 25px;
   text-transform: capitalize;
@@ -27,19 +29,9 @@ h1 {
 
 .time-and-date {
   text-align: center;
-  font-size: 20px;
-}
-
-i.fas.fa-sun {
-  color: rgba(255, 217, 0, 0.979);
-  font-size: 30px;
-  margin-left: 455px;
-}
-
-h2 {
-  text-align: center;
-  padding: 30px 0px 10px 0px;
-  color: white;
+  font-size: 18px;
+  padding-right: 20px;
+  padding-bottom: 10px;
 }
 
 button {
@@ -50,7 +42,7 @@ button {
   padding: 5px 10px;
   display: block;
   margin: 0;
-  margin-left: 395px;
+  margin-left: 280px;
   margin-bottom: 70px;
 }
 
@@ -63,9 +55,9 @@ button:hover {
 
 input {
   text-align: center;
-  margin-left: 360px;
+  margin-left: 263px;
   padding: 3px;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 .githublink {
@@ -77,6 +69,7 @@ ul {
   margin: 0;
   padding: 0;
 }
+
 li {
   text-align: center;
   color: white;
@@ -84,4 +77,9 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
+  font-style: italic;
+}
+
+icon {
+  font-size: 30px;
 }
